--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,9 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="scripts/rx.all.js"></script>
+<script src="scripts/utils/reactive-state.js"></script>
+<script src="scripts/utils/route-decorator.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/manage.js"></script>
