--- a/app/index.html
+++ b/app/index.html
@@ -44,11 +44,13 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/rx.all.js"></script>
+<script src="scripts/utils/rx.all.js"></script>
 <script src="scripts/utils/eventStream.js"></script>
 <script src="scripts/utils/controllerMixin.js"></script>
 <script src="scripts/utils/logicalComponent.js"></script>
-<script src="scripts/utils/route-decorator.js"></script>
+<script src="scripts/utils/routeDecorator.js"></script>
+<script src="scripts/models/dataModels.js"></script>
+<script src="scripts/models/viewModels.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/manage-group-add.js"></script>
 <script src="scripts/services/server.js"></script>
